syntax = "proto2";

message ContentItemMetadata {
    optional string title = 1;
    optional string subtitle = 2;
    optional bool isContainer = 3;
    optional bool isPlayable = 4;
    optional float playbackProgress = 5;
    optional string albumName = 6;
    optional string trackArtistName = 7;
    optional string albumArtistName = 8;
    optional string directorName = 9;
    optional int32 seasonNumber = 10;
    optional int32 episodeNumber = 11;
    optional double releaseDate = 12;
    optional int32 playCount = 13;
    optional double duration = 14;
    optional string localizedContentRating = 15;
    optional bool isExplicitItem = 16;
    optional int32 playlistType = 17;
    optional int32 radioStationType = 18;
    optional bool artworkAvailable = 19;

    optional bool infoAvailable = 21;
    optional bool languageOptionsAvailable = 22;
    optional int32 numberOfSections = 23;
    optional bool lyricsAvailable = 24;
    optional int32 editingStyleFlags = 25;
    optional bool isStreamingContent = 26;
    optional bool isCurrentlyPlaying = 27;
    optional string collectionIdentifier = 28;
    optional string profileIdentifier = 29;
    optional double startTime = 30;
    optional string artworkMIMEType = 31;
    optional string assetURLString = 32;
    optional string composer = 33;
    optional int32 discNumber = 34;
    optional double elapsedTime = 35;
    optional string genre = 36;
    optional bool isAlwaysLive = 37;

    optional float playbackRate = 39;
    optional int32 chapterCount = 40;
    optional int32 totalDiscCount = 41;
    optional int32 totalTrackCount = 42;
    optional int32 trackNumber = 43;
    optional string contentIdentifier = 44;

    optional bool isSharable = 46;

    optional bool isLiked = 48;
    optional bool isInWishList = 49;
    optional int64 radioStationIdentifier = 50;

    optional string radioStationName = 52;
    optional string radioStationString = 53;
    optional int64 iTunesStoreIdentifier = 54;
    optional int64 iTunesStoreSubscriptionIdentifier = 55;
    optional int64 iTunesStoreArtistIdentifier = 56;
    optional int64 iTunesStoreAlbumIdentifier = 57;
    optional bytes purchaseInfoData = 58;
    optional float defaultPlaybackRate = 59;
    optional int32 downloadState = 60;
    optional float downloadProgress = 61;
    optional bytes appMetricsData = 62;
    optional string seriesName = 63;
    optional int32 mediaType = 64;
    optional int32 mediaSubType = 65;

    optional bytes nowPlayingInfoData = 67;
    optional bytes userInfoData = 68;
    optional bool isSteerable = 69;
    optional string artworkURL = 70;
    optional string lyricsURL = 71;
    optional bytes deviceSpecificUserInfoData = 72;
    optional bytes collectionInfoData = 73;
    optional double elapsedTimeTimestamp = 74;
    optional double inferredTimestamp = 75;
    optional string serviceIdentifier = 76;
    optional int32 artworkDataWidth = 77;
    optional int32 artworkDataHeight = 78;
    optional bytes currentPlaybackDateData = 79;
    optional string artworkIdentifier = 80;
}